removing deployed website scrollbar issue

--- a/potfolio.css
+++ b/potfolio.css
@@ -285,6 +285,12 @@ button{
     }
 }
 
+@media screen and (min-width : 1600px) {
+    *{
+        overflow-x:hidden ;
+    }
+    }
+
 
 
 
